# bevytor

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cargo/bevytor_core/: Cargo.toml
cargo/bevytor_core/src/: lib.rs  tree.rs
cargo/bevytor_derive/: Cargo.toml
cargo/bevytor_derive/src/: lib.rs
cargo/bevytor_editor/: Cargo.toml  test-asset-entries.ron  test-initial-scene.ron
cargo/bevytor_editor/resources/: cube.gltf  initial-old.ron  initial.asset.ron  initial.scn.ron  test.gltf
cargo/bevytor_editor/resources/assets/: cube.gltf
cargo/bevytor_editor/resources/project_template/scenes/: initial-bevy-0.10.scn.ron  initial.asset.ron
cargo/bevytor_editor/resources/project_template/scripts/: Cargo.toml
cargo/bevytor_editor/resources/project_template/scripts/.cargo/: config.toml
cargo/bevytor_editor/resources/project_template/scripts/src/: lib.rs
cargo/bevytor_editor/scripts/: Cargo.toml
cargo/bevytor_editor/scripts/src/: lib.rs
cargo/bevytor_editor/src/: main.rs  plugin.rs
cargo/bevytor_editor/src/core/: events.rs  mod.rs  popup.rs
cargo/bevytor_editor/src/error/: mod.rs
cargo/bevytor_editor/src/logs/: mod.rs
cargo/bevytor_editor/src/modules/: mod.rs
cargo/bevytor_editor/src/modules/controls/: mod.rs
cargo/bevytor_editor/src/modules/hierarchy/: mod.rs  tree.rs
cargo/bevytor_editor/src/modules/inspector/: mod.rs  registry.rs
cargo/bevytor_editor/src/modules/inspector/registry/: inspectable.rs
cargo/bevytor_editor/src/scripts/: mod.rs
cargo/bevytor_editor/src/service/: existing_projects.rs  mod.rs  project.rs
cargo/bevytor_editor/src/ui/: file_explorer.rs  mod.rs  project.rs
cargo/bevytor_script/: Cargo.toml
cargo/bevytor_script/src/: lib.rs
cargo/bevytor_spy/: Cargo.toml
cargo/bevytor_spy/src/: plugin.rs
das_demo/: project.bv
das_demo/scenes/: initial-correct-no-camera.scn.ron  initial-correct-with-camera.scn.ron  initial-saved-3.scn.ron  initial-saved.scn.ron
das_demo/scenes/assets/: plane.gltf
evaluation/jumpy-bird/barebone/: Cargo.toml
evaluation/jumpy-bird/barebone/src/: main.rs
src/: main.rs  tree.rs
