[package]
name = "bevytor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = [] } #"dynamic"
bevy_egui = "0.16.0"
bevytor_spy = { path = "cargo/bevytor_spy", version = "0.1.0" }
ron = "0.7.0"
serde = "1.0.143"