[package]
name = "bevytor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = [] } #"dynamic"
bevy_egui = "0.18.0"
bevytor_spy = { path = "cargo/bevytor_spy", version = "0.1.0" }
ron = "0.8.0"
serde = "1.0.143"