[package]
name = "bevytor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libloading = "0.7.4"
# bevytor_script = { path = "cargo/bevytor_script" }
bevy = { version = "0.11.2" }
# bevy_egui = "0.20.2"
# bevytor_core = { path = "cargo/bevytor_core" }