[workspace]
resolver = "2"
members = ["scripts"]

[package]
name = "bevytor_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevytor_core = { path = "../bevytor_core", version = "0.1.0" }
scripts = { path = "scripts" }
bevy = { version = "0.9.1", features = [] } #"dynamic"
bevy_egui = "0.18.0"
native-dialog = "0.6.3"
serde = "1.0.144"
serde_json = "1.0.85"
ron = "0.8"
hot-lib-reloader = { version = "0.6.4" }
dirs = "4.0.0"
sysinfo = "0.27.1"

#[features]
#default = []
#reload = [
#    "dep:hot-lib-reloader",
#    # Make sure that the types don't change:
#    "components/dynamic",
#    # This is important on windows for avoiding file locking issues:
#    "bevy/dynamic",
#]
