# [workspace]
# resolver = "2"
# members = ["projects"]

[package]
name = "bevytor_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# keep deps synced with plugins, some dependencies can cause changes in typeId
[dependencies]
bevy = { version = "0.10.1", features = ["bevy_dynamic_plugin"] }
# for the love of god don't use relative path as different path changes the typeId
bevytor_core = { path = "C:/Users/grabn/Documents/Faks/bevytor/cargo/bevytor_core", version = "0.1.0" }
bevytor_script = { path = "C:/Users/grabn/Documents/Faks/bevytor/cargo/bevytor_script", version = "0.1.0" }
bevy_egui = "0.20.2"
serde = "1.0.144"
serde_json = "1.0.85"
ron = "0.8"
hot-lib-reloader = { version = "0.6.4" }
dirs = "4.0.0"
sysinfo = "0.27.1"
libloading = "0.7.4"
regex = "1.7.3"
futures-lite = "1.13.0"

#[features]
#default = []
#reload = [
#    "dep:hot-lib-reloader",
#    # Make sure that the types don't change:
#    "components/dynamic",
#    # This is important on windows for avoiding file locking issues:
#    "bevy/dynamic",
#]
