[package]
name = "bevytor_spy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevytor_core = { path = "../bevytor_core", version = "0.1.0" }
bevy = { version = "0.8.1", features = [] } #"dynamic"
bevy_egui = "0.16.0"
