[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
bevy = { version = "0.11.2", features = ["bevy_dynamic_plugin"] }
# for the love of god don't use relative path as different path changes the typeId
bevytor_core = { path = "C:/Users/grabn/Documents/Faks/bevytor/cargo/bevytor_core", version = "0.1.0" }
bevytor_script = { path = "C:/Users/grabn/Documents/Faks/bevytor/cargo/bevytor_script", version = "0.1.0" }
bevytor_derive = { path = "C:/Users/grabn/Documents/Faks/bevytor/cargo/bevytor_derive", version = "0.1.0" }
bevy_egui = "0.21.0"
serde = "1.0.144"
serde_json = "1.0.85"
ron = "0.8"
hot-lib-reloader = { version = "0.6.4" }
dirs = "4.0.0"
sysinfo = "0.27.1"
libloading = "0.7.4"
regex = "1.7.3"
futures-lite = "1.13.0"
bevy_mod_picking = "0.15.0"
bevy_transform_gizmo = "0.8.0"
smooth-bevy-cameras = "0.9.0"
paste = "1.0.13"
